# Ranking_Herois

./: .env  .gitignore  airflow.Dockerfile  app.Dockerfile  compose.yaml  logging.yaml  pyproject.toml  readme.md  teste.py
airflow/dags/: dag1.py  ranking_heroes_dag.py
source/: main.py  pipeline.py
source/datasets/: fake_data_file.txt  pontuacao_usuarios.txt
source/datasets/bronze_path/: heroes_information.csv
source/datasets/gold_path/herois_por_especies/: .part-00000-9276356f-cece-4f43-a556-23164240a34a-c000.snappy.parquet.crc  part-00000-9276356f-cece-4f43-a556-23164240a34a-c000.snappy.parquet
source/datasets/gold_path/top10_herois/: .part-00000-24de4aa2-6cda-4aed-8457-d9a98cd31f27-c000.snappy.parquet.crc  part-00000-24de4aa2-6cda-4aed-8457-d9a98cd31f27-c000.snappy.parquet
source/datasets/gold_path/top10_herois.parquet/: .part-00000-718fc2ca-f4f7-4be0-bfe4-4f62a7cf0aab-c000.snappy.parquet.crc  part-00000-718fc2ca-f4f7-4be0-bfe4-4f62a7cf0aab-c000.snappy.parquet
source/extracao/: gera_usuarios.py  herois_bronze.py  usuarios_bronze.py
source/fake_data/: create_data.py
source/load/: gold_herois_por_especies.py  gold_top10_herois.py  gold_top10_herois_femininos.py  gold_top10_herois_masculinos.py  pipeline_gold.py  salva_parquet_load.py
source/tranformacao/: associacao_usuarios_herois.py  tranformacao_usuarios.py  transformacao_herois.py  transformacao_usuarios.py
source/transformacao/: associacao_usuarios_herois.py  transformacao_herois.py  transformacao_usuarios.py  transformacao_usuarios_herois.py
source/usuarios_fakes/: gera_usuarios.py
(+26 files in other folders)
